# ncnn-android-nanodet

./: README.md  build.gradle  settings.gradle
.github/workflows/: release-apk.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: nanodet-ELite0_320.param  nanodet-ELite1_416.param  nanodet-ELite2_512.param  nanodet-RepVGG-A0_416.param  nanodet-g.param  nanodet-m.param
app/src/main/java/com/tencent/nanodetncnn/: MainActivity.java  NanoDetNcnn.java
app/src/main/jni/: CMakeLists.txt  nanodet.cpp  nanodet.h  nanodetncnn.cpp  ndkcamera.cpp  ndkcamera.h
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
